--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-d3-basic": "^1.6.11",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-localstorage": "^0.4.1"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
